# deep_alchemy

./: README.md  pyproject.toml
deep_alchemy/: blackjack.py
notebooks/: blackjack_test.ipynb
notes/: berkeley_cs285_2023.md  deepmind_ucl_2021.md  rl_by_the_book.md
